--- a/mss_evaluation/oracle-cqt/config.json
+++ b/mss_evaluation/oracle-cqt/config.json
@@ -6,9 +6,16 @@
   },
   {
     "type": "nsgt",
-    "name": "nsgt_cq_96_27.5",
+    "name": "nsgt-cq-96-27.5",
     "scale": "octave",
     "bins": 96,
     "fmin": 27.5
+  },
+  {
+    "type": "nsgt",
+    "name": "nsgt-mel-96-27.5",
+    "scale": "mel",
+    "bins": 120,
+    "fmin": 20
   }
 ]
