--- a/mss_evaluation/oracle-cqt/config_log.json
+++ b/mss_evaluation/oracle-cqt/config_log.json
@@ -4,7 +4,7 @@
   },
   "nsgt_configs": {
     "bins": [12, 24, 48, 96, 120, 168],
-    "fmin": [20, 27.5, 32.7, 50, 57, 80],
+    "fmin": [20, 27.5, 32.7, 57],
     "fmax": [22050],
     "scale": ["log"]
   }
