--- a/mss_evaluation/oracle-cqt/config.json
+++ b/mss_evaluation/oracle-cqt/config.json
@@ -1,6 +1,6 @@
 {
   "stft_configs": {
-    "window_sizes": [1024, 4096, 16384]
+    "window_sizes": [1024, 2048, 4096, 8192, 16384]
   },
   "nsgt_configs": [
     {
