--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,9 @@
 [submodule "mss_evaluation/vendor/sigsep-mus-2018-analysis"]
 	path = mss_evaluation/vendor/sigsep-mus-2018-analysis
 	url = https://github.com/sigsep/sigsep-mus-2018-analysis
+[submodule "mss_evaluation/mss-oracle-experiments"]
+	path = mss_evaluation/mss-oracle-experiments
+	url = https://github.com/sevagh/mss-oracle-experiments
+[submodule "mss_evaluation/open-unmix-nsgt"]
+	path = mss_evaluation/open-unmix-nsgt
+	url = git@github.com:sevagh/open-unmix-nsgt
