--- a/mss_evaluation/config.json
+++ b/mss_evaluation/config.json
@@ -1,28 +1,21 @@
 {
   "stft_configs": {
-    "window_sizes": [1024, 2048, 4096, 8192, 16384]
+    "window_sizes": [4096]
   },
   "nsgt_configs": [
     {
-      "bins": 134,
-      "fmin": 47.3,
-      "gamma": 1.7,
-      "scale": "vqlog"
+      "bins": 125,
+      "fmin": 78,
+      "scale": "bark",
+      "sllen": 9216,
+      "trlen": 2304
     },
-    {
-      "bins": 138,
-      "fmin": 51.1,
-      "scale": "cqlog"
-    },
-    {
-      "bins": 263,
-      "fmin": 24.9,
-      "scale": "mel"
-    },
-    {
-      "bins": 239,
-      "fmin": 30.1,
-      "scale": "bark"
-    }
+		{
+		  "bins": 239,
+			"fmin": 30.1,
+      "scale": "bark",
+			"sllen": 32768,
+			"trlen": 8192
+		}
   ]
 }
