--- a/.gitmodules
+++ b/.gitmodules
@@ -16,6 +16,6 @@
 [submodule "mss_evaluation/umx-nsgt"]
 	path = mss_evaluation/umx-nsgt
 	url = git@github.com:sevagh/umx-nsgt.git
-[submodule "mss_evaluation/umx-mr"]
-	path = mss_evaluation/umx-mr
-	url = git@github.com:sevagh/umx-mr.git
+[submodule "mss_evaluation/umx"]
+	path = mss_evaluation/umx
+	url = git@github.com:sevagh/umx.git
