--- a/.gitmodules
+++ b/.gitmodules
@@ -10,6 +10,12 @@
 [submodule "mss_evaluation/vendor/sigsep-mus-2018-analysis"]
 	path = mss_evaluation/vendor/sigsep-mus-2018-analysis
 	url = https://github.com/sigsep/sigsep-mus-2018-analysis
-[submodule "mss_evaluation/mss-oracle-experiments"]
-	path = mss_evaluation/mss-oracle-experiments
-	url = https://github.com/sevagh/mss-oracle-experiments
+[submodule "mss_evaluation/vendor/open-unmix-pytorch"]
+	path = mss_evaluation/vendor/open-unmix-pytorch
+	url = https://github.com/sigsep/open-unmix-pytorch
+[submodule "mss_evaluation/vendor/xumx-sliCQ"]
+	path = mss_evaluation/vendor/xumx-sliCQ
+	url = git@github.com:sevagh/xumx-sliCQ.git
+[submodule "mss_evaluation/vendor/spleeterweb-xumx"]
+	path = mss_evaluation/vendor/spleeterweb-xumx
+	url = https://github.com/JeffreyCA/spleeterweb-xumx
