--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "mss_evaluation/vendor/xumx-sliCQ"]
 	path = mss_evaluation/vendor/xumx-sliCQ
 	url = git@github.com:sevagh/xumx-sliCQ.git
+[submodule "mss_evaluation/vendor/ai-research-code"]
+	path = mss_evaluation/vendor/ai-research-code
+	url = https://github.com/sony/ai-research-code
