--- a/mss_evaluation/mss-oracle-experiments/requirements-cupy.txt
+++ b/mss_evaluation/mss-oracle-experiments/requirements-cupy.txt
@@ -3,7 +3,7 @@ numpy
 cupy-cuda112
 torch
 git+git://github.com/sevagh/sigsep-mus-eval@feat/cupy-accel#egg=museval
-git+git://github.com/sevagh/nsgt@torch#egg=nsgt
+git+git://github.com/sevagh/nsgt@main#egg=nsgt
 librosa
 pandas
 seaborn
