Add poster files

--- a/latex/Makefile
+++ b/latex/Makefile
@@ -14,6 +14,11 @@ proposal-dev: proposal
 proposal: tex_fname="proposal.tex"
 proposal: texpdf
 
+poster-dev: export LATEXMK_FLAGS="-pvc"
+poster-dev: poster
+poster: tex_fname="poster.tex"
+poster: texpdf
+
 chapter-dev: export LATEXMK_FLAGS="-pvc"
 chapter-dev: chapter
 chapter: tex_fname="report_${CHAPTER}.tex"
