--- a/.gitmodules
+++ b/.gitmodules
@@ -28,3 +28,7 @@
 [submodule "old-latex/mdx-submissions21"]
 	path = old-latex/mdx-submissions21
 	url = git@github.com:sevagh/mdx-submissions21
+[submodule "mss_evaluation/vendor/xumx-sliCQ-2022"]
+	path = mss_evaluation/vendor/xumx-sliCQ-2022
+	url = git@github.com:sevagh/xumx-sliCQ
+	branch = develop
