Remove IRM1 from ch4, too crowded for the boxplot

--- a/mss_evaluation/mss-oracle-experiments/requirements-cupy.txt
+++ b/mss_evaluation/mss-oracle-experiments/requirements-cupy.txt
@@ -1,7 +1,7 @@
 scipy
 numpy
 cupy-cuda115
-torch
+torch==1.9
 git+git://github.com/sevagh/sigsep-mus-eval@feat/cupy-accel#egg=museval
 git+git://github.com/sevagh/nsgt@main#egg=nsgt
 librosa
