Start and do a lot of MILA presentation

--- a/latex/Makefile
+++ b/latex/Makefile
@@ -1,5 +1,4 @@
 LATEXMK_FLAGS ?= ""
-CHAPTER ?= "ch0"
 
 texpdf:
 	latexmk $(tex_fname) ${LATEXMK_FLAGS} 
@@ -8,6 +7,11 @@ report-dev: export LATEXMK_FLAGS="-pvc"
 report-dev: report
 report: tex_fname="report.tex"
 report: texpdf
+
+mila-presentation-dev: export LATEXMK_FLAGS="-pvc"
+mila-presentation-dev: mila-presentation
+mila-presentation: tex_fname="mila-presentation.tex"
+mila-presentation: texpdf
 
 all: report
 
