--- a/.gitmodules
+++ b/.gitmodules
@@ -26,3 +26,7 @@
 	path = mss_evaluation/vendor/sigsep-mus-eval-cupy-fork
 	url = https://github.com/sevagh/sigsep-mus-eval
 	branch = feat/cupy-accel
+[submodule "open-unmix-pytorch"]
+	path = mss_evaluation/vendor/open-unmix-pytorch
+	url = https://github.com/sevagh/open-unmix-pytorch
+	branch = chunk-inf
