Ready for final draft

--- a/latex/Makefile
+++ b/latex/Makefile
@@ -10,6 +10,10 @@ report: texpdf
 
 all: report
 
+ghostscript-compressed-thesis: report
+ghostscript-compressed-thesis:
+	gs -sDEVICE=pdfwrite -dCompatibilityLevel=1.5 -dPDFSETTINGS=/printer -dNOPAUSE -dQUIET -dBATCH -sOutputFile=thesis.pdf report.pdf
+
 clean:
 	latexmk -C
 	-rm *.lol
