Prepare for model blending
Former-commit-id: 4fcae9e1807c9eedd58919f8ee26b83a661c400e

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,7 @@
 logdir
 !pretrained_model/*.pth
 !pretrained_model/*.json
+!pretrained_model_bottleneck/*.json
+!pretrained_model_bottleneck/*.pth
+!pretrained_model_blended/*.json
+!pretrained_model_blended/*.pth
